# sdf-design

sdf_modeler/: mod.rs  plugin.toml  sdf_ast.rs  sdf_widget.rs  shader_template.wgsl  wgsl_gen.rs
技术验证/sdf_poc/: Cargo.toml
技术验证/sdf_poc/src/: main.rs  sdf_ast.rs  sdf_widget.rs  shader.wgsl  shader_template.wgsl  wgsl_gen.rs
