[package]
name = "sdf_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["wgpu"] }
bytemuck = { version = "1.19", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
log = "0.4"
env_logger = "0.11"
rhai = { version = "1.24", features = ["f32_float"] }
